loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:1: error: '<-' expected but ')' found.
for (k < 1 to 28 ){
                 ^LoopCourseForest:15: error: illegal start of simple expression
	}
        ^